// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getKey server and live 1`] = `
Array [
  Array [
    "price-feed-private-Live",
  ],
]
`;

exports[`getKey server and live 2`] = `
Array [
  Array [
    "price-feed-private-Live",
    true,
  ],
]
`;

exports[`getKey server and live 3`] = `
Array [
  Array [
    "price-feed-private-Live",
    true,
  ],
]
`;

exports[`getSqlAuth server and live 1`] = `
Array [
  Array [
    "MySQL-DB-Live",
  ],
]
`;

exports[`getSqlAuth server and live 2`] = `
Array [
  Array [
    "MySQL-DB-Live",
    true,
  ],
]
`;

exports[`getSqlAuth server and live 3`] = `
Array [
  Array [
    "MySQL-DB-Live",
    true,
  ],
]
`;
